--- a/responsive-final-project/style.css
+++ b/responsive-final-project/style.css
@@ -1,11 +1,30 @@
+@media(max-width: 500px){
+    section{ 
+    background-color: green;
+    }
+}
+
+@media(max-width: 768px){ 
+    section{ 
+    background-color: yellow;
+    }
+}
+
+@media(min-device-width: 1024px){ 
+    section{
+        background-color: rgb(14, 44, 53);
+    }
+}
+
 .row{
-    width: auto;
+    display: flex;
+    width: 500px;
     height: auto;
 }
 
 [class*='col-']{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex wrap;
     width: auto;
     height: auto;
     break-inside: avoid;
